[Changed] App Name

--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "kajbari",
-    "short_name": "kajbari",
+    "name": "cognix",
+    "short_name": "cognix",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
