--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "kajbari" "\0"
+            VALUE "FileDescription", "cognix" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "kajbari" "\0"
+            VALUE "InternalName", "cognix" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2024 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "kajbari.exe" "\0"
-            VALUE "ProductName", "kajbari" "\0"
+            VALUE "OriginalFilename", "cognix.exe" "\0"
+            VALUE "ProductName", "cognix" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
