--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+    chat_gpt_sdk: ^3.1.4
     file_picker: ^8.1.7
     flutter:
         sdk: flutter
