--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,23 +28,17 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-    chat_gpt_sdk: ^3.1.4
-    file_picker: ^8.1.7
     flutter:
         sdk: flutter
 
-    flutter_chat_types: ^3.6.2
-    flutter_chat_ui: ^1.6.15
     get: ^4.6.6
-    google_fonts: ^6.2.1
-    http: ^1.2.2
     hugeicons: ^0.0.7
-    image_picker: ^1.1.2
-    intl: ^0.20.1
-    mime: ^2.0.0
-    open_filex: ^4.6.0
-    path_provider: ^2.1.5
+    flutter_chat_ui: ^1.6.15
     uuid: ^4.5.1
+    chat_gpt_sdk: ^3.1.4
+    flutter_chat_types: ^3.6.2
+    firebase_core: ^3.9.0
+    firebase_auth: ^5.3.4
 
 dev_dependencies:
     flutter_test:
