--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,10 +35,11 @@ dependencies:
     hugeicons: ^0.0.7
     flutter_chat_ui: ^1.6.15
     uuid: ^4.5.1
-    chat_gpt_sdk: ^3.1.4
     flutter_chat_types: ^3.6.2
     firebase_core: ^3.9.0
     firebase_auth: ^5.3.4
+    google_generative_ai: ^0.4.6
+    flutter_dotenv: ^5.2.1
 
 dev_dependencies:
     flutter_test:
@@ -64,6 +65,7 @@ flutter:
     # To add assets to your application, add an assets section, like this:
     assets:
         - assets/
+        - .env
 
     # An image asset can refer to one or more resolution-specific "variants", see
     # https://flutter.dev/to/resolution-aware-images
