--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,11 @@ dependencies:
     firebase_auth: ^5.3.4
     google_generative_ai: ^0.4.6
     flutter_dotenv: ^5.2.1
+    camera: ^0.11.0+2
+    camerawesome: ^2.1.0
+    open_file: ^3.5.10
+    path: ^1.9.0
+    path_provider: ^2.1.5
 
 dev_dependencies:
     flutter_test:
